Tue Jun 17 11:47:47 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* tok.h: no discrimination of mac for inline definition any more

Wed Jun 11 09:56:05 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* mpsr_Tok.cc (cmd_dictcops): changed names of some MP_Cops

	* longrat.[cc,h], tesths.cc, Makefile.in, configure.in: 
	  added support for smallgmp

Tue Jun 10 17:25:28 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* sing_mp.cc: Got rid off warnings, when incomplete link specs

Thu Jun  5 15:16:19 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* tests/mpcheck: added check for correct remote shell 

Sun May 25 14:06:12 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* configure.in: Fixed handling of CXXFLAGS -- it is not touched if
	  set as env var

Fri May 23 11:40:14 1997  Olaf Bachmann  <obachman@schlupp.mathematik.uni-kl.de (Olaf Bachmann)>

	* Makefile.in: Changed dist target to cp; make distclean

Wed May 21 08:56:19 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* mpsr_Tok.cc: fixed dependencies/generation of mpsr_Tok.inc

	* tesths.cc (main): made -v option gmp v1.3 clean

Tue May 20 14:02:42 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* misc.cc: Put #include <factory.h> into #ifdef HAVE_FACTORY brackets

* hannes: ipshell.cc: fixed a bug in iiExport (multiple exports in rings)
          subexpr.cc: implemented sleftv::Copy for ring/qring
          syz1.cc: added missing idSkipZeros to LaScala*
                    
Wed May 14 16:40:19 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Makefile.in: changed mpcheck.data so that the brain-dead sed on
	  the suns does not mess up the output on files with long lines
